--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
 dataclasses-json==0.6.1
+ecdsa==0.18.0
 exceptiongroup==1.1.3
 faiss-cpu==1.7.4
 fastapi==0.104.1
@@ -23,19 +24,25 @@ lxml==4.9.3
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
+mysql-connector-python==8.2.0
 mysqlclient==2.2.0
 numpy==1.26.1
 openai==0.28.1
 packaging==23.2
+protobuf==4.21.12
+pyasn1==0.5.0
 pydantic==2.4.2
 pydantic_core==2.10.1
 PyPDF2==3.0.1
 python-docx==1.0.1
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.22
 starlette==0.27.0
