--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
+databases==0.8.0
 dataclasses-json==0.6.1
 ecdsa==0.18.0
 exceptiongroup==1.1.3
@@ -30,6 +31,7 @@ numpy==1.26.1
 openai==0.28.1
 packaging==23.2
 protobuf==4.21.12
+psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pydantic==2.4.2
 pydantic_core==2.10.1
