--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ exceptiongroup==1.1.3
 faiss-cpu==1.7.4
 fastapi==0.104.1
 frozenlist==1.4.0
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
@@ -46,7 +47,7 @@ requests==2.31.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy>=1.4.42
+SQLAlchemy==2.0.22
 starlette==0.27.0
 tenacity==8.2.3
 tiktoken==0.5.1
