--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ requests==2.31.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.22
+SQLAlchemy>=1.4.42
 starlette==0.27.0
 tenacity==8.2.3
 tiktoken==0.5.1
